# aamfsd_cv_2022

./: README.md
src/aam_cars/aam_car_2020/aamfsd_description/robots/: aamfsd-dv.urdf.xacro
src/aam_cars/aam_car_2020/aamfsd_description/sensors/: OS1-128.urdf.xacro  OS1-64.urdf.xacro  all_sensors.urdf.xacro
src/aam_cars/aam_car_2020/aamfsd_gazebo/launch/: camera_calibration_track.launch
src/aam_cars/aam_car_2020/ackermann-drive-teleop/: CMakeLists.txt  package.xml
src/aam_cars/aam_car_2020/ackermann-drive-teleop/launch/: robot_teleop_control.launch
src/aam_cars/aam_car_2020/ackermann-drive-teleop/scripts/: keyop.py
src/aam_perception/cam_lidar_fusion/src/: pc2cam_transform.py  projection_birdeye_view.py
src/aam_perception/lidar_cone_detection/rviz/: rviz_config.rviz
src/aam_perception/lidar_cone_detection/src/: lidar_cone_centroid.py  lidar_cone_detection.cpp
