<?xml version="1.0"?>
<package format="2">
  <name>ackermann_drive_teleop</name>
  <version>0.0.0</version>
  <maintainer email="omarselfayoumi@gmail.com">Omar El-Fayoumi</maintainer>
  <description>The ackermann_drive_teleop package</description>
<license>aam</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>ackermann_msgs</depend>

  <export>
  </export>
</package>
